setup sections and images

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hiking World</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- NAVBAR Jonas-->
+
+    <!-- HERO-SECTION Jonas -->
+
+    <!-- LETS GO Jonas -->
+
+    <!-- DISCOUNT Thomas -->
+
+    <!-- HIKING IN THE MOUNTAIN Thomas -->
+
+    <!-- EXPLORE THE WORLD Thomas -->
+
+    <!-- TEXT Bb -->
+
+    <!-- TITLE HERE Bb -->
+
+    <!-- FOOTER Bb -->
+
 </body>
 </html>
