--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
     <!-- TEXT Bb -->
 
     <!-- TITLE HERE Bb -->
-
+    <section class="subscribe-section">
+            <h1>Title Here</h1>
+            <p>Lorem ipsum</p>
+            <div class="search-container">
+                <input type="text" placeholder="Search">
+                <button>Subscribe</button>
+            </div>
+    </section>
     <!-- FOOTER Bb -->
-
-    <!-- FOOTER -->
-    <!-- FOOTER -->
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-item">
