--- a/index.html
+++ b/index.html
@@ -70,7 +70,38 @@
     </section>
     <!-- DISCOUNT Thomas -->
 
+    <div class="discount">
+        <div class="discount-img"> <img src="discount.png" alt=""> </div>
+            <div class="discount-content">
+                <h1>Discount up to 50% All Excursions</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore corporis minus perferendis aperiam error tenetur tempora voluptate quod ut</p>
+                <button> read more</button>
+            </div>
+    </div>
+
+    <div class="promo">
+                <div class="promo-content">
+                    <h1>January's Promo: Buy 1 Get 1 Free</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore corporis minus perferendis aperiam error tenetur tempora voluptate quod ut</p>
+                    <button> read more</button>
+                </div>
+                <div class="promo-img"> <img src="januarysPromo.png" alt="">
+            </div>
+    </div>
+
+
     <!-- HIKING IN THE MOUNTAIN Thomas -->
+
+    <div class="hiking">
+        <div class="hiking-content">
+            <h1>Hiking in the mountains</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore corporis minus perferendis aperiam error tenetur tempora voluptate quod ut</p>
+        </div>
+    </div>
+    <!-- EXPLORE THE WORLD Thomas -->
+    <div class="explore">
+        <img src="exploretheworld.png" alt="">
+    </div>
 
     <!-- EXPLORE THE WORLD Thomas -->
 
@@ -79,7 +110,7 @@
     <!-- TITLE HERE Bb -->
     <section class="subscribe-section">
             <h1>Title Here</h1>
-            <p>Lorem ipsum</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati nulla reiciendis ut dignissimos, modi voluptas quis omnis beatae nobis minus ipsum. Illum doloremque saepe et sapiente aliquam neque magni officiis!</p>
             <div class="search-container">
                 <input type="text" placeholder="Search">
                 <button>Subscribe</button>
